--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
-    testImplementation 'com.codeborne:selenide-testng:6.13.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.3'
+    //testImplementation 'com.codeborne:selenide-testng:6.13.0'
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.3'
 }
 
